<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Fire TV Remote</string>

    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="adb_connect_error">Connect failed</string>
    <string name="left">&#8592;</string>
    <string name="right">&#8594;;</string>
    <string name="up">&#8593;</string>
    <string name="down">&#8595;</string>
    <string name="enter">&#9711;</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="prev">Back</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Forward</string>
    <string name="menu">Menu</string>
    <string name="action_settings">Settings</string>
</resources>